[project]
name = "matchmaking_service"
version = "0.1.0"
description = "Matchmaking service for competitive online multiplayer games."
authors = [{ name = "An Spiteri" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"fastapi[standard]",
	"uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
